--- a/templates/actor/dialogs/ranged-attack-dialog.html
+++ b/templates/actor/dialogs/ranged-attack-dialog.html
@@ -119,7 +119,7 @@
             </div>
             <div class="list-item flexrow">
 
-                <input type="checkbox" name="high" value="10"><label>You are on higher ground: +10</label>
+                <input type="checkbox" name="high" value="10"{{#if options.high}} checked{{/if}}><label>You are on higher ground: +10</label>
             </div>
             <div class="list-item flexrow">
 
