--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -94,7 +94,13 @@
     grid-column: span 12 / span 12;
     grid-template-columns: repeat(12, minmax(0, 1fr));
 }
-
+.fortyk .simple-grid3{
+    
+    width:100%;
+    height:100%;
+    padding:3px;
+    grid-column-end :span 3;
+}
 .flex-group-center,
 .flex-group-left,
 .flex-group-right {
