added ignores cover
added ignores cover weapon attribute, added overwatch and counter attack to attack dialogs

--- a/templates/actor/dialogs/melee-attack-dialog.html
+++ b/templates/actor/dialogs/melee-attack-dialog.html
@@ -55,6 +55,10 @@
 
                 <input type="checkbox" name="guarded" value="{{modifiers.guarded}}" label="Guarded"><label>Guarded: {{modifiers.guarded}}</label>
             </div>
+            <div class="list-item flexrow"{{#unless options.counter}} hidden{{/unless}}>
+
+                <input type="checkbox" name="counter" value="-20" label="Counter Attack"><label>Counter Attack: -20</label>
+            </div>
 
 
         </div>
