--- a/templates/actor/dialogs/ranged-attack-dialog.html
+++ b/templates/actor/dialogs/ranged-attack-dialog.html
@@ -46,7 +46,11 @@
             </div>
             <div class="list-item flexrow">
 
-                <input type="checkbox" name="guarded" value="{{modifiers.guarded}}" label="Guarded"><label>Guarded: {{modifiers.Guarded}}</label>
+                <input type="checkbox" name="guarded" value="{{modifiers.guarded}}" label="Guarded"><label>Guarded: {{modifiers.guarded}}</label>
+            </div>
+            <div class="list-item flexrow">
+
+                <input type="checkbox" name="overwatch" value="-20" label="Overwatch"><label>Overwatch: -20</label>
             </div>
 
 
