fixed bugs & added forcefield tests
fixed bugs with the new item properties dialog, made a new system for forcefield tests,

--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -696,6 +696,11 @@
     background-image: "" !important;
     color: white !important;
 }
+.test-overload{
+    background-color: orangered!important;
+    background-image: "" !important;
+    color: white !important;
+}
 .power-push{
     border-color: red !important;
 }
