--- a/templates/chat/chat-test.html
+++ b/templates/chat/chat-test.html
@@ -8,6 +8,9 @@
     </div>
     <span class="chat-line {{#if success}}test-success{{else}}test-failure{{/if}}">{{pass}}</span>
     <span class="roll-result">{{dos}}</span>
+    {{#if numberHits}}
+    <span class="chat-line">{{numberHits}}</span>
+    {{/if}}
     {{#unless reroll}}
     <a class="button reroll" data-actor="{{actor}}" data-char="{{char}}" data-roll-type="{{type}}" data-target="{{targetNumber}}" data-label="{{label}}" data-weapon="{{weapon}}" data-fire="{{fireRate}}">Reroll</a>
     {{/unless}}
