--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -697,9 +697,9 @@
     color: white !important;
 }
 .test-overload{
-    background-color: orangered!important;
+    background-color: yellowgreen !important;
     background-image: "" !important;
-    color: white !important;
+    color: black !important;
 }
 .power-push{
     border-color: red !important;
