--- a/templates/chat/chat-forcefield-test.html
+++ b/templates/chat/chat-forcefield-test.html
@@ -3,6 +3,7 @@
     
     <span class="chat-line">{{title}}</span>
     <div class="flexrow">
+        <span class="chat-line">Hits: {{hits}}</span>
         <span class="chat-line">Rating: {{rating}}</span>
         <span class="chat-line">Overload {{overload}}</span>   
     </div>
