--- a/templates/chat/chat-damage.html
+++ b/templates/chat/chat-damage.html
@@ -1,6 +1,6 @@
 <div class="fortyk chat-message flexcol">
     
-    <span class="chat-line">{{wpnName}} Damage Roll against {{target}}</span>
+    <span class="chat-line">{{wpnName}} damage roll against {{target}}</span>
     
     <span class="chat-line dmg-descr">{{dmgType}} {{hitLocation}} hit</span>
     {{#each results}}
