--- a/templates/chat/chat-test-popup.html
+++ b/templates/chat/chat-test-popup.html
@@ -1,5 +1,5 @@
 <a class="popup {{#if success}}test-success{{else}}test-failure{{/if}}" data-id="{{id}}">{{label}} test
-    <span class="popuptext" id="{{id}}">
+    <span class="fortyk popuptext" id="{{id}}">
 
 
         <span class="chat-line">{{title}}</span>
