--- a/templates/chat/chat-test.html
+++ b/templates/chat/chat-test.html
@@ -12,6 +12,6 @@
     <span class="chat-line">{{numberHits}}</span>
     {{/if}}
     {{#unless reroll}}
-    <a class="button reroll" data-actor="{{actor}}" data-char="{{char}}" data-roll-type="{{type}}" data-target="{{targetNumber}}" data-label="{{label}}" data-weapon="{{weapon}}" data-fire="{{fireRate}}">Reroll</a>
+    <a class="fortyk button reroll" data-actor="{{actor}}" data-char="{{char}}" data-roll-type="{{type}}" data-target="{{targetNumber}}" data-label="{{label}}" data-weapon="{{weapon}}" data-fire="{{fireRate}}">Reroll</a>
     {{/unless}}
 </div>
