--- a/templates/chat/chat-test-popup.html
+++ b/templates/chat/chat-test-popup.html
@@ -1,17 +1,20 @@
 <a class="popup {{#if success}}test-success{{else}}test-failure{{/if}}" data-id="{{id}}">{{label}} test
-    <span class="fortyk popuptext" id="{{id}}">
+    <span class="fortyk popuptext flexcol" id="{{id}}">
 
 
-        <span class="chat-line">{{title}}</span>
+        <span class="chat-target">{{title}}</span>
         <div class="flexrow">
-            <span class="chat-line">{{rollResult}}</span>
-            <span class="chat-line">{{target}}</span>   
+            <span class="chat-target">{{rollResult}}</span>
+            <span class="chat-target">{{target}}</span>   
         </div>
-        <span class="chat-line {{#if success}}test-success{{else}}test-failure{{/if}}">{{pass}}</span>
-        <span class="roll-result">{{dos}}</span>
-        {{#if numberHits}}
-        <span class="chat-line">{{numberHits}}</span>
-        {{/if}}
+        <div class="flexcol chat-target">
+            <span class=" {{#if success}}test-success{{else}}test-failure{{/if}}">{{pass}}</span>
+            <span class="roll-result">{{dos}}</span>
+            {{#if numberHits}}
+            <span class="">{{numberHits}}</span>
+            {{/if}}
+        </div>
+
         {{#unless reroll}}
         <span class="button reroll" data-actor="{{actor}}" data-char="{{char}}" data-roll-type="{{type}}" data-target="{{targetNumber}}" data-label="{{label}}" data-weapon="{{weapon}}" data-fire="{{fireRate}}">Reroll</span>
         {{/unless}}
