--- a/templates/chat/chat-damage.html
+++ b/templates/chat/chat-damage.html
@@ -1,11 +1,10 @@
 <div class="fortyk chat-message flexcol">
-    
-    <span class="chat-line">{{wpnName}} damage roll against {{target}}</span>
-    
-    <span class="chat-line dmg-descr">{{dmgType}} {{hitLocation}} hit</span>
-    {{#each results}}
-    <div class="chat-line">{{this}}</div>
-    
-    {{/each}}
-    
+    <div class="flexcol chat-target">
+        <span class="">{{wpnName}} damage roll against {{target}}</span>
+
+        <span class="chat-line dmg-descr">{{dmgType}} {{hitLocation}} hit</span>
+    </div>
+
+    {{#each results}}{{this}}{{/each}}
+
 </div>
