--- a/templates/actor/dialogs/damage-dialog.html
+++ b/templates/actor/dialogs/damage-dialog.html
@@ -1,8 +1,8 @@
 <div class="flexcol">
-<div class="flexrow"><label>Number of Hits:</label> <input type="text" id="modifier" name="hits" value="1" data-dtype="Number" autofocus/></div>
-<div class="flexrow"><label>Bonus Damage:</label> <input type="text" id="dmg" name="dmg" value="0" data-dtype="Number" /></div>
+    <div class="flexrow"><label>Number of Hits:</label> <input type="text" id="modifier" name="hits" value="{{hits}}" data-dtype="Number" autofocus/></div>
+    <div class="flexrow"><label>Bonus Damage:</label> <input type="text" id="dmg" name="dmg" value="0" data-dtype="Number" /></div>
     <div class="flexrow"><label>Bonus Penetration:</label> <input type="text" id="pen" name="pen" value="0" data-dtype="Number" /></div>
-    
+
     <div class="flexrow"{{#unless dfa}}hidden{{/unless}}><label>Magnitude Damage:</label> <input type="text" id="magdmg" name="magdmg" value="0" data-dtype="Number" /></div>
-    
+
 </div>
