--- a/templates/chat/chat-forcefield-test.html
+++ b/templates/chat/chat-forcefield-test.html
@@ -1,5 +1,5 @@
 
-<div class="fortyk chat-message flexcol">
+<div class="fortyk chat-background flexcol">
     
     <span class="chat-line">{{title}}</span>
     <div class="flexrow">
