--- a/templates/chat/chat-test-popup.html
+++ b/templates/chat/chat-test-popup.html
@@ -1,5 +1,5 @@
-<a class="popup {{#if success}}test-success{{else}}test-failure{{/if}}" data-id="{{id}}">{{label}} test
-    <span class="fortyk popuptext flexcol" id="{{id}}">
+<a class="popup  {{#if success}}test-success{{else}}test-failure{{/if}}" data-id="{{id}}">{{label}} test
+    <span class="fortyk popuptext chat-background flexcol" id="{{id}}">
 
 
         <span class="chat-target">{{title}}</span>
